# relais

./: .gitignore  Makefile  README.md
client/: README.md  pubspec.yaml
client/android/app/: build.gradle.kts
client/ios/Runner/: Info.plist
client/ios/Runner.xcodeproj/: project.pbxproj
client/lib/: app.dart  main.dart
client/lib/l10n/: strings.dart
client/lib/models/: agent_message.dart  agent_status.dart  server.dart  session.dart  slash_command.dart  task.dart
client/lib/providers/: agent_provider.dart  agent_status_provider.dart  server_provider.dart  session_provider.dart  settings_provider.dart  task_provider.dart  terminal_provider.dart
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
docs/: KNOWN-ISSUES.md
docs/plans/: 2026-03-27-p0-project-scaffold.md  2026-03-27-p1-client-mvp.md  2026-03-28-multi-agent-office.md  2026-03-28-phase2-task-dispatch.md  2026-03-28-phase3-refinement.md  2026-03-28-slash-commands.md
docs/specs/: 2026-03-27-p0-project-scaffold-design.md  2026-03-27-relais-flutter-client-design.md  2026-03-28-multi-agent-office-design.md  2026-03-28-phase2-task-dispatch-design.md  2026-03-28-phase3-refinement-design.md  2026-03-28-slash-commands-design.md
protocol/: api.md
server/: Cargo.toml
server/crates/server/: Cargo.toml
server/crates/server/src/: auth.rs  lib.rs  logging.rs  rate_limit.rs  router.rs  state.rs
server/crates/server/src/api/: agents.rs  mod.rs  sessions.rs  tasks.rs
server/crates/server/src/ws/: agent.rs  status.rs  terminal.rs
(+69 files in other folders)
